force-app/main/default/objects/ssot__AccountRelationship__dlm/fields/ssot__AccountRelationshipRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountRelationshipRole__c</fullName>
    <label>Account Relationship Role</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AccountRelationshipRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>