force-app/main/default/objects/ssot__AccountRelationship__dlm/fields/ssot__IsSelfRelationship__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSelfRelationship__c</fullName>
    <label>Self Relationship</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSelfRelationship</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>