force-app/main/default/objects/ssot__AccountRelationship__dlm/fields/ssot__RelatedAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedAccountId__c</fullName>
    <label>Related Account</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>