force-app/main/default/objects/ssot__AccountRelationship__dlm/fields/ssot__RelatedInverseRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedInverseRecordId__c</fullName>
    <label>Related Inverse Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedInverseRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>